examples/test/testpolicy19263.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19263
  namespace: namespace41
spec:
  podSelector:
    matchLabels:
      key37: value43
      key31: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value11
          key18: value29
          key39: value45
      podSelector:
        matchLabels:
          key39: value9
